kafka--producer-exemplo/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: producer-deployment
  namespace: producer
  labels:
    app: producer-deployment
spec:
  selector:
    matchLabels:
      app: producer-deployment
  template:
    metadata:
      labels:
        app: producer-deployment
    spec:
      containers:
        - name: producer-deployment
          image: localhost:32000/producer-teste:1.0.0
#          readinessProbe:
#            httpGet:
#              path: actuator/health
#              port: 5001
#            initialDelaySeconds: 1
#            periodSeconds: 3
#            timeoutSeconds: 2
#          livenessProbe:
#            httpGet:
#              path: actuator/health
#              port: 5001
#            initialDelaySeconds: 1
#            periodSeconds: 3
#            timeoutSeconds: 2
          resources:
            requests:
              memory: "400Mi"
              cpu: "400m"
            limits:
              memory: "400Mi"
              cpu: "400m"
          ports:
            - containerPort: 5001
