kafka--producer-exemplo/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: producer-service
  namespace: producer
spec:
  type: ClusterIP
  selector:
    app: producer-deployment
  ports:
    - port: 5001
      name: default-port-application
      protocol: TCP
      targetPort: 5001
